refactor: restructure npm scripts for code checking
コードチェック用のnpmスクリプトを再構成

- check:code: Biomeによるコードチェック（format + lint）を追加
- codecheck: check:*とlint:*を並列実行するスクリプトを追加
- fix:code: Biomeによるコード修正（lint:scriptからリネーム）
- test: lintの代わりにcodecheckを実行するよう変更

これにより、GitHub ActionsのCI/CDで自動的にBiomeのチェックが実行される

--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "spindle",
   "private": true,
   "scripts": {
-    "test": "run-p lint test:*",
+    "test": "run-p codecheck test:*",
     "test:packages": "lerna run test",
     "test:bin": "jest bin",
+    "codecheck": "run-p check:* lint:*",
+    "check:code": "biome check",
     "lint": "run-p lint:*",
-    "lint:script": "biome check",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
     "fix": "run-p fix:*",
-    "fix:script": "biome check --write",
+    "fix:code": "biome check --write",
     "fix:packages": "lerna run format",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
