chore: biome a11y recommended option

--- a/biome.json
+++ b/biome.json
@@ -42,7 +42,7 @@
         "noUselessFragments": "error"
       },
       "a11y": {
-        "recommended": false
+        "recommended": true
       }
     }
   },
