--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -51,6 +51,7 @@
     "@storybook/addon-webpack5-compiler-swc": "4.0.1",
     "@storybook/react": "10.0.3",
     "@storybook/react-webpack5": "10.0.3",
+    "@swc/core": "1.14.0",
     "@swc/jest": "0.2.39",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
