--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "codecheck": "run-p check:* lint:*",
     "check:code": "biome check",
     "lint": "run-p lint:*",
+    "lint:css": "stylelint '**/*.css'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
     "lint:packages": "lerna run lint",
     "lint:text": "textlint --quiet .",
     "fix": "run-p fix:*",
     "fix:code": "biome check --write",
+    "fix:css": "stylelint '**/*.css' --fix",
     "fix:packages": "lerna run format",
     "fix:text": "textlint --fix .",
     "bootstrap": "lerna bootstrap",
@@ -37,6 +39,10 @@
     "lerna": "9.0.0",
     "npm-run-all2": "8.0.4",
     "prettier": "3.6.2",
+    "stylelint": "16.25.0",
+    "stylelint-config-standard": "39.0.1",
+    "stylelint-order": "7.0.0",
+    "stylelint-selector-bem-pattern": "4.0.1",
     "textlint": "15.2.3",
     "textlint-rule-preset-ameba": "openameba/textlint-rule-preset-ameba#v0.5.1",
     "typescript": "5.9.3",
