--- a/packages/spindle-tokens/tsconfig.json
+++ b/packages/spindle-tokens/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "moduleResolution": "Node",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["vitest/globals", "node"]
   },
   "include": [
     "scripts/**/*.ts",
