--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -10,8 +10,11 @@
   ],
   "scripts": {
     "generate": "scaffdog generate",
-    "test": "run-p size test:interaction",
-    "test:interaction": "jest",
+    "test": "run-p size lint test:interaction",
+    "lint": "yarn lint:style",
+    "lint:style": "stylelint '**/*.css'",
+    "fix": "yarn lint:style --fix",
+    "test:interaction": "vitest run",
     "presize": "yarn build",
     "size": "bundlewatch --config .bundlewatch.config.js",
     "dev": "yarn storybook:start",
@@ -69,14 +72,12 @@
     "@storybook/react": "10.0.7",
     "@storybook/react-webpack5": "10.0.7",
     "@svgr/cli": "8.1.0",
-    "@swc/core": "1.15.1",
-    "@swc/jest": "0.2.39",
     "@testing-library/dom": "10.4.1",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
-    "@types/jest": "30.0.0",
     "@types/react": "19.2.4",
+    "@vitest/ui": "4.0.7",
     "autoprefixer": "10.4.22",
     "bundlewatch": "0.4.1",
     "cssnano": "7.1.2",
@@ -84,8 +85,7 @@
     "dotenv": "17.2.3",
     "figma-api": "1.12.0",
     "firebase-tools": "14.25.0",
-    "jest": "30.2.0",
-    "jest-environment-jsdom": "30.2.0",
+    "jsdom": "27.1.0",
     "postcss": "8.5.6",
     "postcss-cli": "11.0.1",
     "postcss-import": "16.1.1",
@@ -96,6 +96,11 @@
     "reg-publish-gcs-plugin": "0.14.4",
     "reg-suit": "0.14.5",
     "scaffdog": "4.1.0",
-    "storybook": "10.0.7"
+    "storybook": "10.0.7",
+    "stylelint": "16.25.0",
+    "stylelint-config-standard": "39.0.1",
+    "stylelint-order": "7.0.0",
+    "stylelint-selector-bem-pattern": "4.0.1",
+    "vitest": "4.0.7"
   }
 }
