--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -101,6 +101,7 @@
     "stylelint-config-standard": "39.0.1",
     "stylelint-order": "7.0.0",
     "stylelint-selector-bem-pattern": "4.0.1",
-    "vitest": "4.0.13"
+    "vitest": "4.0.13",
+    "@vscode/web-custom-data": "0.6.1"
   }
 }
