--- a/packages/spindle-hooks/package.json
+++ b/packages/spindle-hooks/package.json
@@ -7,22 +7,22 @@
   "scripts": {
     "test": "run-p size test:interaction",
     "test:interaction": "vitest run --passWithNoTests",
-    "dev": "yarn storybook:start",
+    "dev": "pnpm storybook:start",
     "storybook:start": "storybook dev -p 6006 -c .storybook",
     "storybook:build": "storybook build -o public -c .storybook",
     "storybook:deploy": "firebase deploy --only hosting",
     "serve": "firebase serve",
-    "presize": "yarn build",
+    "presize": "pnpm build",
     "size": "bundlewatch --config .bundlewatch.config.js",
-    "clean": "npx rimraf dist",
-    "prebuild": "yarn clean",
+    "clean": "rm -rf dist",
+    "prebuild": "pnpm clean",
     "build": "run-s build:esm build:cjs",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "run-s build:esm:*",
     "build:esm:js": "tsc -p tsconfig.esm.json",
     "build:esm:rename": "npx renamer --find js --replace mjs 'dist/**'",
     "build:esm:extensionReplace": "jscodeshift -t ../../bin/outputExtensionReplace.js dist/** --extensions=mjs",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "pnpm build"
   },
   "license": "MIT",
   "files": [
