--- a/packages/spindle-mcp-server/package.json
+++ b/packages/spindle-mcp-server/package.json
@@ -42,6 +42,7 @@
     "zod": "^4.1.9"
   },
   "devDependencies": {
+    "@cfworker/json-schema": "4.1.1",
     "@openameba/spindle-tokens": "^1.9.0",
     "@openameba/spindle-ui": "^3.1.0",
     "@types/node": "24.10.3",
