--- a/packages/spindle-mcp-server/tsconfig.json
+++ b/packages/spindle-mcp-server/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "./src",
     "module": "nodenext",
     "target": "ES2022",
-    "lib": ["ES2022"],
+    "lib": ["ES2022", "DOM"],
     "declaration": true
   },
   "include": ["src/**/*"],
