chore: migrate overrides to pnpm-workspace.yaml
Move package overrides from package.json pnpm.overrides to
pnpm-workspace.yaml overrides field following pnpm v10 best practices.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,12 @@
 packages:
   - 'packages/*'
+
+overrides:
+  zod: 3.25.76
+  superstatic: 10.0.0
+  axios: 1.13.2
+  undici: 7.16.0
+  undici-types: 7.16.0
+  semver: 7.7.3
+  chokidar: 5.0.0
+  '@octokit/endpoint': 11.0.2
