--- a/.github/workflows/deploy-ui-catalog.yml
+++ b/.github/workflows/deploy-ui-catalog.yml
@@ -21,8 +21,8 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - name: Update UI catalog
         run: |
-          pnpm lerna run --scope @openameba/spindle-hooks build
-          pnpm lerna run --scope @openameba/spindle-ui storybook:build
+          pnpm --filter @openameba/spindle-hooks build
+          pnpm --filter @openameba/spindle-ui storybook:build
       - name: deploy to live channel
         uses: FirebaseExtended/action-hosting-deploy@e2eda2e106cfa35cdbcf4ac9ddaf6c4756df2c8c # v0
         with:
