--- a/.github/workflows/build-icon-from-figma.yml
+++ b/.github/workflows/build-icon-from-figma.yml
@@ -42,8 +42,8 @@ jobs:
           ICONS: ${{ github.event.inputs.selection }}
         run: |
           node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: $ICONS.map(({name}) => name) })" > packages/spindle-icons/figma.json
-          pnpm lerna run --scope @openameba/spindle-icons build
-          pnpm lerna run --scope @openameba/spindle-ui icon
+          pnpm --filter @openameba/spindle-icons build
+          pnpm --filter @openameba/spindle-ui icon
           pnpm fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 # v8.0.0
