--- a/.github/workflows/build-icon.yml
+++ b/.github/workflows/build-icon.yml
@@ -32,8 +32,8 @@ jobs:
           ICON_NAMES: ${{ github.event.inputs.modified_components }}
         run: |
           node -p "JSON.stringify({ fileKey: '$FILE_KEY', nodeId: '$NODE_ID', dest: 'dist', iconNames: '$ICON_NAMES' })" > packages/spindle-icons/figma.json
-          pnpm lerna run --scope @openameba/spindle-icons build
-          pnpm lerna run --scope @openameba/spindle-ui icon
+          pnpm --filter @openameba/spindle-icons build
+          pnpm --filter @openameba/spindle-ui icon
           pnpm fix
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 # v8.0.0
