--- a/.github/workflows/release-changesets.yml
+++ b/.github/workflows/release-changesets.yml
@@ -38,7 +38,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build spindle-hooks
-        run: pnpm lerna run --scope @openameba/spindle-hooks build
+        run: pnpm --filter @openameba/spindle-hooks build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
