--- a/package.json
+++ b/package.json
@@ -11,35 +11,34 @@
     "lint": "run-p lint:*",
     "lint:css": "stylelint '**/*.css'",
     "lint:yaml": "yamllint .github/workflows/*.yml",
-    "lint:packages": "lerna run lint",
+    "lint:packages": "pnpm -r --parallel lint",
     "lint:text": "textlint --quiet .",
     "fix": "run-p fix:*",
     "fix:code": "biome check --write",
     "fix:css": "stylelint '**/*.css' --fix",
-    "fix:packages": "lerna run format",
+    "fix:packages": "pnpm -r --parallel format",
     "fix:text": "textlint --fix .",
     "bootstrap": "pnpm install",
     "build": "run-s build:*",
-    "build:package": "lerna run build",
+    "build:package": "pnpm -r --parallel build",
     "build:extensionReplace": "jscodeshift -t ./bin/outputExtensionReplace.js packages/*/dist/** --extensions=mjs",
     "prepare": "is-ci || husky install",
     "version-packages": "changeset version",
     "release": "changeset publish"
   },
   "devDependencies": {
-    "pnpm": "10.25.0",
     "@biomejs/biome": "2.3.8",
     "@changesets/changelog-github": "0.5.2",
     "@changesets/cli": "2.29.8",
     "@commitlint/cli": "20.2.0",
     "@commitlint/config-conventional": "20.2.0",
-    "@commitlint/config-lerna-scopes": "20.2.0",
+    "@commitlint/config-pnpm-scopes": "20.1.0",
     "husky": "9.1.7",
     "is-ci": "4.1.0",
     "jscodeshift": "17.3.0",
-    "lerna": "9.0.3",
     "lint-staged": "16.2.7",
     "npm-run-all2": "8.0.4",
+    "pnpm": "10.25.0",
     "prettier": "3.7.4",
     "stylelint": "16.26.1",
     "stylelint-config-standard": "39.0.1",
