ci: use changeset publish to handle duplicate publishing
- Change from 'pnpm publish -r' to 'pnpm changeset publish'
- Prevents duplicate publishing when already published versions exist
- Maintains prepublishOnly script execution with --ignore-scripts=false

--- a/.github/workflows/release-changesets.yml
+++ b/.github/workflows/release-changesets.yml
@@ -52,4 +52,4 @@ jobs:
 
       - name: Publish to npm with prepublishOnly
         if: steps.changesets.outputs.hasChangesets == 'false'
-        run: pnpm publish -r --ignore-scripts=false
+        run: npm_config_ignore_scripts=false pnpm changeset publish
