chore: fix pnpm 10.27.0 installation issues
- Clear store with pnpm store prune for semi-breaking virtual store changes
- Ignore missing hono peer dependency from @modelcontextprotocol/sdk

pnpm 10.27.0 includes semi-breaking changes to virtual global store structure
that requires store cleanup and stricter peer dependency handling.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,11 @@
 packages:
   - 'packages/*'
 
+pnpm:
+  peerDependencyRules:
+    ignoreMissing:
+      - hono
+
 overrides:
   superstatic: 10.0.0
   axios: 1.13.2
