--- a/packages/spindle-ui/package.json
+++ b/packages/spindle-ui/package.json
@@ -38,7 +38,7 @@
     "icon": "run-s icon:react icon:connect",
     "posticon": "rm -rf icon-tmp",
     "icon:react": "svgr --out-dir src/Icon icon-tmp",
-    "icon:connect": "npx tsx scripts/figma-connect-icons.ts",
+    "icon:connect": "tsx scripts/figma-connect-icons.ts",
     "prepublishOnly": "pnpm build && pnpm cp"
   },
   "license": "MIT",
@@ -102,6 +102,7 @@
     "stylelint-config-standard": "39.0.1",
     "stylelint-order": "7.0.1",
     "stylelint-selector-bem-pattern": "4.0.1",
+    "tsx": "4.21.0",
     "vitest": "4.0.17"
   }
 }
