--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:package": "pnpm -r --parallel build",
     "build:extensionReplace": "jscodeshift -t ./bin/outputExtensionReplace.js packages/*/dist/** --extensions=mjs",
     "prepare": "is-ci || husky install",
-    "version-packages": "changeset version && pnpm install --lockfile-only",
+    "version-packages": "changeset version && pnpm install --lockfile-only --no-frozen-lockfile",
     "release": "changeset publish"
   },
   "devDependencies": {
