chore: group stylelint packages in Renovate

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -8,5 +8,13 @@
   ],
   "reviewers": [
     "team:spindle-working-group"
+  ],
+  "packageRules": [
+    {
+      "groupName": "stylelint packages",
+      "matchPackagePatterns": [
+        "^stylelint"
+      ]
+    }
   ]
 }
